# exwmconf

./: .gitignore  .gitmodules  README.md  commit-guidelines.txt  init-dotfiles.sh  slynk-create-server-stumpwm.sh  start-dm.sh  unlink-dotfiles.sh
.config/bspwm/: autostart.sh
.config/herbstluftwm/: autostart  rofi_run_hlwm
.config/nvim/: init.vim
.config/rofi/: config.rasi
.config/sway/: config
.config/sxhkd/: sxhkdrc
.emacs.d/: init.el  templates
.emacs.d/archive/: init.el
.emacs.d/site-lisp/: ysz-compatibility.el  ysz-completion.el  ysz-email.el  (+8 more)
cwm/: .cwmrc
dot-emacs.d/: .mc-lists.el  early-init.el  init.el  templates  tramp
dot-stumpwm.d/: autostart.lisp  init.lisp  init.lisp.prev
dotfile-init-scripts/: init-dotfiles.sh  unlink-dotfiles.sh
emacs/: .emacs  .gnus.el
emacs-minimal-v2/: .emacs
emacs-minimal-v3/: .emacs
emacs-minimal-v4-no-usepackage/: .emacs
emacs-minimal-v5/: .emacs
emacs-minimal-v6/: .emacs
etc-scripts/: start-audio-stuff.sh  start-vpn.sh  stop-dm.sh  stop-vpn.sh
jwm/: .jwmrc
mbsync/: .mbsyncrc
nixos/: configuration.nix  hardware-configuration.nix
notmuch/: .notmuch-config
stalonetray/: .stalonetrayrc
stuff/: audio-checker.sh  get-email-pass.sh  list-pkgs-in-overlays.sh  nextcloudsync.sh  test-endpoint.sh  test.sh  wg-client-gen.sh
tmux/: .tmux.conf
vim/: .gvimrc  .vimrc
xmonad-minimal/.config/xmonad/: .cabal  xmonad-config.html  xmonad-config.org  xmonad-config.org_archive  xmonad.hs
xorg/: .Xresources  .xinitrc  .xinitrc-2  .xinitrc-xmonad  .xprofile
xsettingsd/: .xsettingsd  .xsettingsd-twm
(+410 files in other folders)
