cabal-version:  2.2
name:           xmonad
version:        0.0.9.1 -- change to your liking, it doesn't really matter

executable xmonad
  main-is: xmonad.hs
  hs-source-dirs:
    .
    lib
  other-modules:
    -- add all modules in lib/ here
  build-depends:
    xmonad
    xmonad-contrib -- if needed
    -- add other dependencies.
